<resources>
    <string name="app_name">TK 백신</string>

    // ApkListActivity 전용 텍스트
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_apk_list">AppList Demo</string>
    <string name="appicon">Application Icon</string>
    <string name="apkname">Application Name</string>
    <string name="package_name">Package Name</string>
    <string name="version">Version</string>
    <string name="features">Required Features</string>
    <string name="permissions">Required Permissions</string>
    <string name="req_version">Taget SDK Version</string>
    <string name="path_info">Path Info</string>
    <string name="appsize">Physical Size</string>
    <string name="installed">Installed Date</string>
    <string name="modified">Last Modified Date</string>
    <string name="apk_list_all_package">모든 패키지</string>
    <string name="apk_list_except_system">시스템 패키지 제외하고 표시</string>
    <string name="apk_list_only_system">시스템 패키지만 표시</string>

    // DangerApkListActivity 전용 텍스트
    <string name="example">예시</string>
    <string name="internet">인터넷 사용여부 :  </string>
    <string name="danger_list_all">모든 패키지</string>
    <string name="danger_list_red">위험(RED) 패키지만 표시</string>
    <string name="danger_list_yellow">주의(YELLOW) 패키지만 표시</string>
    <string name="danger_list_green">안전(GREEN) 패키지만 표시</string>

    // MainActivity 전용 텍스트
    <string name="notice_title">Notice</string>
    <string name="notice_subtitle_1">기능 1</string>
    <string name="notice_subtitle_2">기능 2</string>
    <string name="notice_subtitle_3">기능 3</string>
    <string name="notice_1">디바이스에 설치된 어플리케이션 리스트 정보 확인</string>
    <string name="notice_2">위험한 권한을 지닌 어플리케이션 목록 확인</string>
    <string name="notice_3">개인정보를 스니핑하는 어플리케이션 탐색 및 삭제</string>
    <string name="copyright">designed by flat-icons, srip and freepik from Flaticon</string>

    // VaccineReadyActivity 전용 텍스트
    <string name="sms_progress">문자</string>
    <string name="call_progress">통화기록</string>
    <string name="contact_progress">주소록</string>
    <string name="vra_start_button">비콘 삽입 시작</string>
    <string name="start_vpn">VPN 시작</string>
    <string name="stop_vpn">VPN 중지</string>

    // ToyVPN
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="secret">Shared Secret:</string>
    <string name="connect">Connect!</string>
    <string name="connecting">ToyVPN is connecting..</string>
    <string name="connected">ToyVPN is connected!</string>
    <string name="disconnected">ToyVPN is disconnected!</string>
</resources>
