<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VaccineReadyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sms_progress"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="30sp"
                />

            <ImageView
                android:id="@+id/vra_sms_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:visibility="invisible"
                android:src="@drawable/ic_check"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/call_progress"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="30sp"
                />

            <ImageView
                android:id="@+id/vra_call_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:visibility="invisible"
                android:src="@drawable/ic_check"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/contact_progress"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="30sp"
                />

            <ImageView
                android:id="@+id/vra_contact_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:visibility="invisible"
                android:src="@drawable/ic_check"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1">

        <Button
            android:id="@+id/vra_start_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#7aeee0"
            android:text="@string/vra_start_button"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>